--- a/src/components/ProjectSpread.module.css
+++ b/src/components/ProjectSpread.module.css
@@ -16,14 +16,21 @@
 
 .winnerText {
   display: block;
-  text-align: center;
   flex: 1;
-  text-align: end
+  /* text-align: end */
+}
+
+.textEnd {
+  text-align: end;
+}
+
+.textStart {
+  text-align: start;
 }
 
 .winnerText h1 {
-  font-size: 4rem;
-  margin-bottom: 0;
+  font-size: 5rem;
+  margin: 0;
 }
 
 .winnerText h2 {
@@ -31,3 +38,8 @@
   margin: 0;
 }
 
+.spreadCardButton {
+  width: 100%;
+  cursor: pointer;
+  padding: 1rem 0;
+}
