--- a/src/components/CategorySection.module.css
+++ b/src/components/CategorySection.module.css
@@ -1,5 +1,19 @@
 .categorySection {
+  gap: 4rem
+}
+
+.categoryHeader {
+  font-size: 5rem;
+  margin-bottom: 0;
+}
+
+.categorySubHeader {
+  font-size: 2rem;
+}
+
+.categoryMain {
+  margin-top: 2rem;
   display: flex;
   flex-direction: column;
-  gap: 4rem
+  gap: 4rem;
 }
